fixed overflow issue, comment out loading screen for now

--- a/Styles/global.css
+++ b/Styles/global.css
@@ -2,7 +2,7 @@
 
 html {
   scroll-padding: 50px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 @supports (-moz-appearance: none) {
