--- a/Styles/growinc.css
+++ b/Styles/growinc.css
@@ -12,7 +12,7 @@
 .rain {
   position: absolute;
   left: 0;
-  width: 100%;
+  width: 98%;
   height: 100%;
   z-index: 1;
 }
